# DiabetesType1ManagementSystem

./: .gitignore  Hypoglycemia.bpmn  Ketoacidosis.bpmn  Makefile  README.md  default.env  default.siddhi.alt  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
bpmn/: Hypoglycemia.bpmn  Ketoacidosis_V2.bpmn  Ketoacidosis_new.bpmn  glucose-pattern-analysis.bpmn  hyperglycemia.bpmn
patients/001/: food.csv  glucose.csv  insulin.csv
patients/002/: food.csv  glucose.csv  insulin.csv
patients/003/: food.csv  glucose.csv  insulin.csv
patients/004/: food.csv  insulin.csv
patients/005/: food.csv  insulin.csv
patients/006/: food.csv  glucose.csv  insulin.csv
patients/007/: food.csv  insulin.csv
patients/008/: food.csv  insulin.csv
patients/009/: food.csv  glucose.csv  insulin.csv
report-generating/: pom.xml
report-generating/src/main/java/edu/poedss/: App.java
report-generating/src/test/java/edu/poedss/: AppTest.java
services/: docker-compose.camunda.yml  docker-compose.external.yml  docker-compose.siddhi.yml  docker-compose.yml  docker-compose.zeebe.yml  external.Dockerfile  siddhi.Dockerfile
siddhi-apps/: default.siddhi  gen-reports.siddhi  hyperglycemia.siddhi  hypoglycemia.siddhi  ketoacidosis.siddhi
src/poedss/: poedss.py  streamManager.py
